--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   },
   "author": "gopatrik",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "colors": "^1.4.0",
     "request": "^2.88.0"
-  },
-  "dependencies": {}
+  }
 }
